fix arrow to top on mobile

--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -1247,11 +1247,11 @@ div.swiper-horizontal.post-slider{
     font-size: 14px;
 }
 .to_top_btn,.phone{
-    width: 56px;
-    height: 56px;
+    width: 56px!important;
+    height: 56px!important;
 }
 .to_top_btn{
-    background-color: rgba(241,241,241, 0.5);
+    background-color: rgba(241,241,241, 0.5)!important;
 }
 .to_top_btn svg{
     width: 15px;
@@ -1342,6 +1342,10 @@ h3{
 }
 
 @media (max-width: 980px) {
+    .to_top_btn,.phone{
+        width: 40px!important;
+        height: 40px!important;
+    }
     .footer__bottom, .footer .footer__bottom .col-lg-7{
         position: relative;
     }
